--- a/db/hsqldb-db.properties
+++ b/db/hsqldb-db.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.5.0
-#Thu Mar 19 16:47:45 CET 2020
+#Thu Mar 19 17:57:44 CET 2020
 tx_timestamp=0
-modified=yes
+modified=no
 version=2.5.0
